--- a/src.ipynb
+++ b/src.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.utils import shuffle\n",
+    "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +290,7 @@
        "[1913 rows x 14 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,13 +299,13 @@
     "train_data = pd.read_csv('data/train.csv')\n",
     "X_train = train_data.iloc[:, 4:-1].to_numpy()\n",
     "Y_train = train_data.iloc[:,-1].to_numpy()\n",
-    "# X_train\n",
+    "X_train, Y_train = shuffle(X_train, Y_train)\n",
     "train_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
