update: add hidden layer and ann classes

--- a/src.ipynb
+++ b/src.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "[1913 rows x 14 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,38 +319,57 @@
     "        class_dict[clas] = i\n",
     "    for i in range(N):\n",
     "        ohe[i, class_dict[data[i]]] = 1\n",
-    "    return ohe.astype(np.int64)\n",
+    "    return ohe\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = np.concatenate([one_hard_encoding(X_train[:, 0]), X_train[:, 1:4], one_hard_encoding(X_train[:, 4]), X_train[:, 5:]], axis=1)"
+    "X_train = np.concatenate([one_hard_encoding(X_train[:, 0]), X_train[:, 1:4], one_hard_encoding(X_train[:, 4]), X_train[:, 5:]], axis=1).astype(np.float32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 1, 0, 0, 18.1188793585253, 24, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0],\n",
-       "      dtype=object)"
+       "(1913, 21)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train[0]"
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class H_layer(object):\n",
+    "    def __init__(self, M1, M2):\n",
+    "        self.M1 = M1\n",
+    "        self.M2 = M2\n",
+    "        W = np.random.randn(M1, M2) / np.sqrt(M1)\n",
+    "        b = np.zeros(M2)\n",
+    "        self.W = tf.Variable(W.astype(np.float32))\n",
+    "        self.b = tf.Variable(b.astype(np.float32))\n",
+    "        self.params = [self.W, self.b]\n",
+    "\n",
+    "    def forward(self, X):\n",
+    "        return tf.nn.relu(tf.matmul(X, self.W) + self.b)"
    ]
   },
   {
@@ -358,7 +377,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ANN(object):\n",
+    "    def __init__(self, hidden_layer_sizes, p_keep):\n",
+    "        self.hidden_layer_sizes = hidden_layer_sizes\n",
+    "        self.p_keep = p_keep\n",
+    "\n",
+    "    def fit(self, X, Y, lr=1e-3, mu=0.99, decay=0.999, epochs=300, batch_sz=100, split=True, print_every=20):\n",
+    "        N, D = X.shape\n",
+    "        K = 1\n",
+    "        self.hidden_layer = []\n",
+    "        M1 = D\n",
+    "        for M2 in self.hidden_layer_sizes:\n",
+    "            self.hidden_layer.append(H_layer(M1, M2))\n",
+    "            M1 = M2\n",
+    "\n",
+    "        W = np.random.randn(M1, K) / np.sqrt(M1)\n",
+    "        b = np.zeros(K)\n",
+    "        self.W = tf.Variable(W.astype(np.float32))\n",
+    "        self.b = tf.Variable(b.astype(np.float32))\n",
+    "\n",
+    "        self.params = [self.W, self.b]\n",
+    "        for h in self.hidden_layer:\n",
+    "            self.params += h.params\n",
+    "\n",
+    "        inputs = tf.placeholder(tf.float32, shape=(None, D), name=\"input\")\n",
+    "        labels = tf.placeholder(tf.int64, shape=(None,), name=\"labels\")\n",
+    "        logits = self.forward(inputs)\n",
+    "\n",
+    "        \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
