--- a/src.ipynb
+++ b/src.ipynb
@@ -2,310 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tensorflow.keras.metrics import MeanSquaredError\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.utils import shuffle\n",
-    "import tensorflow as tf"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.callbacks import EarlyStopping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>StudentID</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Ethnicity</th>\n",
-       "      <th>ParentalEducation</th>\n",
-       "      <th>StudyTimeWeekly</th>\n",
-       "      <th>Absences</th>\n",
-       "      <th>Tutoring</th>\n",
-       "      <th>ParentalSupport</th>\n",
-       "      <th>Extracurricular</th>\n",
-       "      <th>Sports</th>\n",
-       "      <th>Music</th>\n",
-       "      <th>Volunteering</th>\n",
-       "      <th>GPA</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1643</td>\n",
-       "      <td>18</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Caucasian</td>\n",
-       "      <td>Higher</td>\n",
-       "      <td>18.118879</td>\n",
-       "      <td>24</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.396278</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2753</td>\n",
-       "      <td>16</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>Some College</td>\n",
-       "      <td>2.469271</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.754751</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2402</td>\n",
-       "      <td>17</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Asian</td>\n",
-       "      <td>Bachelor</td>\n",
-       "      <td>3.456401</td>\n",
-       "      <td>25</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.136166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3033</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Caucasian</td>\n",
-       "      <td>High School</td>\n",
-       "      <td>15.838131</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.172192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1991</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Caucasian</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.045373</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.747356</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1908</th>\n",
-       "      <td>2639</td>\n",
-       "      <td>15</td>\n",
-       "      <td>0</td>\n",
-       "      <td>African American</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13.092424</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.595627</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1909</th>\n",
-       "      <td>2096</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Caucasian</td>\n",
-       "      <td>Some College</td>\n",
-       "      <td>2.159249</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Very High</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.523945</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1910</th>\n",
-       "      <td>2131</td>\n",
-       "      <td>16</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Caucasian</td>\n",
-       "      <td>Some College</td>\n",
-       "      <td>3.572578</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.051919</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1911</th>\n",
-       "      <td>2295</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>Some College</td>\n",
-       "      <td>4.402585</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
-       "      <td>High</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.348997</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1912</th>\n",
-       "      <td>1861</td>\n",
-       "      <td>18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>African American</td>\n",
-       "      <td>Some College</td>\n",
-       "      <td>5.427628</td>\n",
-       "      <td>27</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Moderate</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.012063</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1913 rows × 14 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      StudentID  Age  Gender         Ethnicity ParentalEducation  \\\n",
-       "0          1643   18       1         Caucasian            Higher   \n",
-       "1          2753   16       1             Other      Some College   \n",
-       "2          2402   17       0             Asian          Bachelor   \n",
-       "3          3033   17       1         Caucasian       High School   \n",
-       "4          1991   16       0         Caucasian               NaN   \n",
-       "...         ...  ...     ...               ...               ...   \n",
-       "1908       2639   15       0  African American               NaN   \n",
-       "1909       2096   16       0         Caucasian      Some College   \n",
-       "1910       2131   16       1         Caucasian      Some College   \n",
-       "1911       2295   18       0             Other      Some College   \n",
-       "1912       1861   18       0  African American      Some College   \n",
-       "\n",
-       "      StudyTimeWeekly  Absences  Tutoring ParentalSupport  Extracurricular  \\\n",
-       "0           18.118879        24         1             NaN                1   \n",
-       "1            2.469271        19         0             Low                0   \n",
-       "2            3.456401        25         0             NaN                0   \n",
-       "3           15.838131        25         1        Moderate                0   \n",
-       "4            1.045373        19         1        Moderate                0   \n",
-       "...               ...       ...       ...             ...              ...   \n",
-       "1908        13.092424        13         1             Low                0   \n",
-       "1909         2.159249        19         0       Very High                0   \n",
-       "1910         3.572578        14         1        Moderate                1   \n",
-       "1911         4.402585        20         0            High                0   \n",
-       "1912         5.427628        27         0        Moderate                0   \n",
-       "\n",
-       "      Sports  Music  Volunteering       GPA  \n",
-       "0          1      0             0  1.396278  \n",
-       "1          0      0             1  0.754751  \n",
-       "2          0      0             0  0.136166  \n",
-       "3          0      0             0  1.172192  \n",
-       "4          0      1             0  1.747356  \n",
-       "...      ...    ...           ...       ...  \n",
-       "1908       0      0             0  1.595627  \n",
-       "1909       1      0             0  1.523945  \n",
-       "1910       1      0             0  2.051919  \n",
-       "1911       0      0             0  1.348997  \n",
-       "1912       0      0             0  0.012063  \n",
-       "\n",
-       "[1913 rows x 14 columns]"
+       "array([['Higher', 0.135763480471796, 17, ..., 1, 1, 1],\n",
+       "       ['Higher', 1.98992452361276, 0, ..., 0, 0, 1],\n",
+       "       [nan, 10.5887148108255, 15, ..., 0, 0, 1],\n",
+       "       ...,\n",
+       "       ['High School', 5.14192178790224, 5, ..., 0, 0, 0],\n",
+       "       [nan, 10.2816139123855, 10, ..., 0, 0, 0],\n",
+       "       [nan, 15.6104360551404, 26, ..., 0, 0, 0]], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train_data = pd.read_csv('data/train.csv')\n",
+    "test_data = pd.read_csv('data/test.csv')\n",
     "X_train = train_data.iloc[:, 4:-1].to_numpy()\n",
     "Y_train = train_data.iloc[:,-1].to_numpy()\n",
-    "X_train, Y_train = shuffle(X_train, Y_train)\n",
-    "train_data"
+    "X_test = test_data.iloc[:, 4:].to_numpy()\n",
+    "X_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,51 +67,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = np.concatenate([one_hard_encoding(X_train[:, 0]), X_train[:, 1:4], one_hard_encoding(X_train[:, 4]), X_train[:, 5:]], axis=1).astype(np.float32)"
+    "X_train = np.concatenate([one_hard_encoding(X_train[:, 0]), X_train[:, 1:4], one_hard_encoding(X_train[:, 4]), X_train[:, 5:]], axis=1).astype(np.float32)\n",
+    "X_test = np.concatenate([one_hard_encoding(X_test[:, 0]), X_test[:, 1:4], one_hard_encoding(X_test[:, 4]), X_test[:, 5:]], axis=1).astype(np.float32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1913, 21)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X_train.shape"
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class H_layer(object):\n",
-    "    def __init__(self, M1, M2):\n",
-    "        self.M1 = M1\n",
-    "        self.M2 = M2\n",
-    "        W = np.random.randn(M1, M2) / np.sqrt(M1)\n",
-    "        b = np.zeros(M2)\n",
-    "        self.W = tf.Variable(W.astype(np.float32))\n",
-    "        self.b = tf.Variable(b.astype(np.float32))\n",
-    "        self.params = [self.W, self.b]\n",
+    "class ANN(tf.keras.Model):\n",
+    "    def __init__(self, hidden_layer_sizes, p_keep):\n",
+    "        super(ANN, self).__init__()\n",
+    "        self.hidden_layers = []\n",
+    "        self.dropout_rates = p_keep\n",
     "\n",
-    "    def forward(self, X):\n",
-    "        return tf.nn.relu(tf.matmul(X, self.W) + self.b)"
+    "        M1 = X_train.shape[1] \n",
+    "        for M2 in hidden_layer_sizes:\n",
+    "            self.hidden_layers.append(tf.keras.layers.Dense(M2, activation='relu'))\n",
+    "            self.hidden_layers.append(tf.keras.layers.Dropout(self.dropout_rates[0]))  # Apply dropout after each hidden layer\n",
+    "            self.dropout_rates = self.dropout_rates[1:]  # Update dropout rate for next layers\n",
+    "\n",
+    "        self.output_layer = tf.keras.layers.Dense(1)\n",
+    "\n",
+    "    def call(self, inputs, training=False):\n",
+    "        x = inputs\n",
+    "        for layer in self.hidden_layers:\n",
+    "            x = layer(x, training=training)\n",
+    "        return self.output_layer(x)\n",
+    "    \n",
+    "    def r_squared(y_true, y_pred):\n",
+    "        residual = tf.reduce_sum(tf.square(y_true - y_pred))\n",
+    "        total = tf.reduce_sum(tf.square(y_true - tf.reduce_mean(y_true)))\n",
+    "        r2 = 1 - residual / (total + tf.keras.backend.epsilon())\n",
+    "        return r2\n",
+    "\n",
+    "    def fit_model(self, X, Y, lr=1e-2, epochs=1000, batch_sz=50, X_val=None, Y_val=None):\n",
+    "        self.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=lr),\n",
+    "                    loss='mse', metrics=['mae', r_squared])\n",
+    "\n",
+    "        callbacks = [\n",
+    "            EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
+    "        ]\n",
+    "\n",
+    "        self.fit(X, Y, \n",
+    "                validation_data=(X_val, Y_val), \n",
+    "                epochs=epochs, \n",
+    "                batch_size=batch_sz, \n",
+    "                callbacks=callbacks, \n",
+    "                verbose=1)\n"
    ]
   },
   {
@@ -378,35 +140,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ANN(object):\n",
-    "    def __init__(self, hidden_layer_sizes, p_keep):\n",
-    "        self.hidden_layer_sizes = hidden_layer_sizes\n",
-    "        self.p_keep = p_keep\n",
+    "submission = None\n",
+    "def main():\n",
+    "    global submission\n",
+    "    ann = ANN([4000, 4000], [0.8, 0.5, 0.5])\n",
     "\n",
-    "    def fit(self, X, Y, lr=1e-3, mu=0.99, decay=0.999, epochs=300, batch_sz=100, split=True, print_every=20):\n",
-    "        N, D = X.shape\n",
-    "        K = 1\n",
-    "        self.hidden_layer = []\n",
-    "        M1 = D\n",
-    "        for M2 in self.hidden_layer_sizes:\n",
-    "            self.hidden_layer.append(H_layer(M1, M2))\n",
-    "            M1 = M2\n",
-    "\n",
-    "        W = np.random.randn(M1, K) / np.sqrt(M1)\n",
-    "        b = np.zeros(K)\n",
-    "        self.W = tf.Variable(W.astype(np.float32))\n",
-    "        self.b = tf.Variable(b.astype(np.float32))\n",
-    "\n",
-    "        self.params = [self.W, self.b]\n",
-    "        for h in self.hidden_layer:\n",
-    "            self.params += h.params\n",
-    "\n",
-    "        inputs = tf.placeholder(tf.float32, shape=(None, D), name=\"input\")\n",
-    "        labels = tf.placeholder(tf.int64, shape=(None,), name=\"labels\")\n",
-    "        logits = self.forward(inputs)\n",
-    "\n",
-    "        \n",
-    "\n"
+    "    ann.compile(optimizer=tf.keras.optimizers.SGD(learning_rate=1e-2),\n",
+    "                loss='mse', metrics=['mae']) \n",
+    "    ann.fit(X_train, Y_train)\n",
+    "    predictions = ann.predict(X_test)\n",
+    "    submission = pd.DataFrame({'GPA': predictions.reshape(len(predictions))})\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n"
    ]
   }
  ],
