--- a/src.ipynb
+++ b/src.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,22 +16,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>StudentID</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Ethnicity</th>\n",
+       "      <th>ParentalEducation</th>\n",
+       "      <th>StudyTimeWeekly</th>\n",
+       "      <th>Absences</th>\n",
+       "      <th>Tutoring</th>\n",
+       "      <th>ParentalSupport</th>\n",
+       "      <th>Extracurricular</th>\n",
+       "      <th>Sports</th>\n",
+       "      <th>Music</th>\n",
+       "      <th>Volunteering</th>\n",
+       "      <th>GPA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1643</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Higher</td>\n",
+       "      <td>18.118879</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.396278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2753</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Some College</td>\n",
+       "      <td>2.469271</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.754751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2402</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Asian</td>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>3.456401</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.136166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3033</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>High School</td>\n",
+       "      <td>15.838131</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.172192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1991</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.045373</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.747356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1908</th>\n",
+       "      <td>2639</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>African American</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13.092424</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.595627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1909</th>\n",
+       "      <td>2096</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Some College</td>\n",
+       "      <td>2.159249</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Very High</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.523945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1910</th>\n",
+       "      <td>2131</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>Some College</td>\n",
+       "      <td>3.572578</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.051919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1911</th>\n",
+       "      <td>2295</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Some College</td>\n",
+       "      <td>4.402585</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>High</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.348997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1912</th>\n",
+       "      <td>1861</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>African American</td>\n",
+       "      <td>Some College</td>\n",
+       "      <td>5.427628</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.012063</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1913 rows × 14 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([['Higher', 0.135763480471796, 17, ..., 1, 1, 1],\n",
-       "       ['Higher', 1.98992452361276, 0, ..., 0, 0, 1],\n",
-       "       [nan, 10.5887148108255, 15, ..., 0, 0, 1],\n",
-       "       ...,\n",
-       "       ['High School', 5.14192178790224, 5, ..., 0, 0, 0],\n",
-       "       [nan, 10.2816139123855, 10, ..., 0, 0, 0],\n",
-       "       [nan, 15.6104360551404, 26, ..., 0, 0, 0]], dtype=object)"
+       "      StudentID  Age  Gender         Ethnicity ParentalEducation  \\\n",
+       "0          1643   18       1         Caucasian            Higher   \n",
+       "1          2753   16       1             Other      Some College   \n",
+       "2          2402   17       0             Asian          Bachelor   \n",
+       "3          3033   17       1         Caucasian       High School   \n",
+       "4          1991   16       0         Caucasian               NaN   \n",
+       "...         ...  ...     ...               ...               ...   \n",
+       "1908       2639   15       0  African American               NaN   \n",
+       "1909       2096   16       0         Caucasian      Some College   \n",
+       "1910       2131   16       1         Caucasian      Some College   \n",
+       "1911       2295   18       0             Other      Some College   \n",
+       "1912       1861   18       0  African American      Some College   \n",
+       "\n",
+       "      StudyTimeWeekly  Absences  Tutoring ParentalSupport  Extracurricular  \\\n",
+       "0           18.118879        24         1             NaN                1   \n",
+       "1            2.469271        19         0             Low                0   \n",
+       "2            3.456401        25         0             NaN                0   \n",
+       "3           15.838131        25         1        Moderate                0   \n",
+       "4            1.045373        19         1        Moderate                0   \n",
+       "...               ...       ...       ...             ...              ...   \n",
+       "1908        13.092424        13         1             Low                0   \n",
+       "1909         2.159249        19         0       Very High                0   \n",
+       "1910         3.572578        14         1        Moderate                1   \n",
+       "1911         4.402585        20         0            High                0   \n",
+       "1912         5.427628        27         0        Moderate                0   \n",
+       "\n",
+       "      Sports  Music  Volunteering       GPA  \n",
+       "0          1      0             0  1.396278  \n",
+       "1          0      0             1  0.754751  \n",
+       "2          0      0             0  0.136166  \n",
+       "3          0      0             0  1.172192  \n",
+       "4          0      1             0  1.747356  \n",
+       "...      ...    ...           ...       ...  \n",
+       "1908       0      0             0  1.595627  \n",
+       "1909       1      0             0  1.523945  \n",
+       "1910       1      0             0  2.051919  \n",
+       "1911       0      0             0  1.348997  \n",
+       "1912       0      0             0  0.012063  \n",
+       "\n",
+       "[1913 rows x 14 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,12 +303,12 @@
     "X_train = train_data.iloc[:, 4:-1].to_numpy()\n",
     "Y_train = train_data.iloc[:,-1].to_numpy()\n",
     "X_test = test_data.iloc[:, 4:].to_numpy()\n",
-    "X_test"
+    "train_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,8 +362,8 @@
     "        M1 = X_train.shape[1] \n",
     "        for M2 in hidden_layer_sizes:\n",
     "            self.hidden_layers.append(tf.keras.layers.Dense(M2, activation='relu'))\n",
-    "            self.hidden_layers.append(tf.keras.layers.Dropout(self.dropout_rates[0]))  # Apply dropout after each hidden layer\n",
-    "            self.dropout_rates = self.dropout_rates[1:]  # Update dropout rate for next layers\n",
+    "            self.hidden_layers.append(tf.keras.layers.Dropout(self.dropout_rates[0]))\n",
+    "            self.dropout_rates = self.dropout_rates[1:]\n",
     "\n",
     "        self.output_layer = tf.keras.layers.Dense(1)\n",
     "\n",
@@ -118,7 +379,7 @@
     "        r2 = 1 - residual / (total + tf.keras.backend.epsilon())\n",
     "        return r2\n",
     "\n",
-    "    def fit_model(self, X, Y, lr=1e-2, epochs=1000, batch_sz=50, X_val=None, Y_val=None):\n",
+    "    def fit_model(self, X, Y, lr=1e-2, epochs=1000, batch_sz=100, X_val=None, Y_val=None):\n",
     "        self.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=lr),\n",
     "                    loss='mse', metrics=['mae', r_squared])\n",
     "\n",
@@ -136,9 +397,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 47ms/step - loss: 1.0339 - mae: 0.8028\n",
+      "\u001b[1m15/15\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 10ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "submission = None\n",
     "def main():\n",
